--- a/front-end/package.json
+++ b/front-end/package.json
@@ -29,7 +29,8 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-router-native": "^5.1.2",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "ws": ">=1.1.5"
   },
   "devDependencies": {
     "@babel/core": "~7.6.0",
